--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.15"
+    "react-native": "0.70.15",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
